fixed JSON calls for locations